--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "html5",
     "appc-client"
   ],
-  "version": "1.14.6",
+  "version": "1.15.0-1",
   "author": "Appcelerator, Inc. <info@appcelerator.com>",
   "maintainers": [
     {
@@ -75,5 +75,8 @@
     "eslint": "^4.14.0",
     "jake": "^8.0.12",
     "mkdirp": "^0.5.1"
+  },
+  "publishConfig": {
+    "tag": "next"
   }
 }
