ci: pass auth token through to sdk install

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,8 @@ jobs:
           npm ci
           npm i titanium -g
           ti sdk install ${{ matrix.tiSDK }} -d
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Run tests
         run: npm test
       
