Added PurgeTSS dependency

--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "@babel/core": "^7.4.5",
     "@babel/generator": "^7.4.4",
     "@babel/parser": "^7.4.5",
+    "@babel/template": "^7.4.4",
     "@babel/traverse": "^7.4.5",
     "@babel/types": "^7.4.4",
-    "@babel/template": "^7.4.4",
     "@xmldom/xmldom": "^0.8.0",
     "async": "^3.2.0",
     "colors": "1.4.0",
@@ -48,6 +48,7 @@
     "moment": "2.29.1",
     "node.extend": "2.0.2",
     "pkginfo": "0.4.1",
+    "purgetss": "^5.3.9",
     "resolve": "^1.1.7",
     "source-map": "^0.7.3",
     "walk-sync": "^0.3.2",
