--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@xmldom/xmldom": "^0.8.0",
     "async": "^3.2.0",
     "colors": "1.4.0",
+    "command-exists": "^1.2.9",
     "commander": "^8.0.0",
     "ejs": "3.1.6",
     "fs-extra": "^5.0.0",
@@ -48,7 +49,6 @@
     "moment": "2.29.1",
     "node.extend": "2.0.2",
     "pkginfo": "0.4.1",
-    "purgetss": "^5.3.9",
     "resolve": "^1.1.7",
     "source-map": "^0.7.3",
     "walk-sync": "^0.3.2",
