ci: remove latest sdk tests from the test matrix as it is no longer available

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       matrix:
         nodeVersion: [ '12.x' ]
         os: [ macos-latest ]
-        tiSDK: [ latest, '-b master' ] # -b master is to reduce the complexity of handling a GA install vs a branch install
+        tiSDK: [ latest ]
     steps:
       - uses: actions/checkout@v2
         with:
