Initial poc on using swc to parse and transform code

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@babel/template": "^7.18.10",
     "@babel/traverse": "^7.18.15",
     "@babel/types": "^7.20.0",
+    "@prantlf/jsonlint": "11.7.0",
+    "@swc/core": "^1.3.92",
     "@xmldom/xmldom": "^0.8.5",
     "async": "^3.2.4",
     "colors": "1.4.0",
@@ -36,7 +38,6 @@
     "ejs": "3.1.8",
     "fs-extra": "^10.1.0",
     "global-paths": "^1.0.0",
-    "@prantlf/jsonlint": "11.7.0",
     "lodash": "^4.17.4",
     "moment": "2.29.4",
     "node.extend": "2.0.2",
