--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v1
         with:
-          node-version: '18.x'
+          node-version: '16.x'
       - name: Install dependencies
         run: npm ci
       - name: Lint
@@ -28,7 +28,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        nodeVersion: [ '18.x' ]
+        nodeVersion: [ '16.x' ]
         os: [ macos-latest ]
         tiSDK: [ latest ]
     steps:
@@ -42,8 +42,9 @@ jobs:
         run: |
           npm ci
           npm i titanium -g
-          ti sdk install ${{ matrix.tiSDK }}
+          ti sdk install ${{ matrix.tiSDK }} -d
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Run tests
         run: npm test
+      
