--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,9 +31,8 @@ jobs:
 
     - name: Publish to npm
       env:
-        GH_TOKEN: ${{ github.token }}
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      run: npm run release
+      run: npm publish --tag ${{ github.event.release.prerelease && 'next' || 'latest' }}
 
     - name: Get package.json info
       id: get-package-info
